static/css/style.css
@font-face {
    font-family: 'pacifico';
    src: url('/static/font/pacifico/pacificopacifico-webfont.eot');
    src: url('/static/font/pacifico/pacifico-webfont.eot?#iefix') format('embedded-opentype'), url('/static/font/pacifico/pacifico-webfont.woff') format('woff'), url('/static/font/pacifico/pacifico-webfont.ttf') format('truetype'), url('/static/font/pacifico/pacifico-webfont.svg#pacificoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

html {
    position: relative;
    min-height: 100%;
}
body {
    min-height: 400px;
}
.footer {
    padding-top: 20px;
    bottom: 0;
    width: 100%;
    height: 60px;
    background-color: #f5f5f5;
    text-align: center;
    position: fixed;
}
html, body {
    height: 100%;
}
.container-fluid, .container {
    margin-right: auto;
    margin-left: auto;
    max-width: 950px;
    /* or 1600px */
}
.text-center {
    text-align: center;
}
.navbar-brand {
    font-family: 'pacifico', helvetica, sans-serif;
    font-size: 175%;
    padding-bottom: 31px;
}
.nav .album-art {
    margin-top: -5px;
    height: 30px;
    width: 30px;
}
.album-art {
    display: inline;
}
/*Dat red: #d9230f */
/*Dat grey: #474949*/
.blank{
  display: inline;
  z-index:1;
  position: absolute;
  height: 200px;
  width: 200px;
}
.metadata {
font-size: 65%;

}
.nav .metadata {
    text-align: right;
}
.music-queue .metadata {
    padding-top: -10px;
}
.music-data {
    display: inline;
    line-height: 150%;
    text-align: center;
}
.song-name {
    color: #d9230f;
    font-size: 130%;
}
.votes {
    text-align: center;
    display: block;
}
.thumbCount{
    display: inline-block;
    margin-left: 10%;
    margin-right: 10%;
}
.icon {
    font-size: 250%;
}
.icon:hover[data-voted="false"]{
    margin-top: -5px;
    margin-left: -.75px;
    margin-right: -.75px;
    color: red;
    font-size: 275%;
}
.icon:hover[data-voted="true"]{
    color: grey;
}
.icon[data-voted="true"] {
    color: red;
}
.thumbCountNum {
    font-size: 150%;
}
.deleteButton {
    float: right;
    font-size: 175%;
}
.deleteButton:hover {
    font-size: 200%;
    color: red;
}
/*li > .badge {
    background-color: #474949;
    padding: 10px 10px;
}*/

.list-group-item .album-art {
    width: 30px;
    height: 30px;
}

.list-group .music-queue {}

.enter-buttons{
   padding-top: 50%;
}

/*SVG Hero*/
.svg-row {
    overflow-x: hidden;
    text-align: center;
    margin: 0 auto;
}
#svg-canvas {
    margin: 0 auto;
    text-align: center;
}
.svg-area {
    margin: 0 auto;
    position: relative;
    text-align: center;
}
svg {
   display: block;
   bottom: 0px;
   width: 40vw;
   height: auto;
   margin: 0 auto;
   text-align: center;
}

svg path {
   stroke-linecap:round;
   stroke-linejoin:round;
}

.loading {
  display: inline-block;
  /*margin: 2.5em;*/
  border-width: 25px;
  border-radius: 50%;
  -webkit-animation: spin 2s linear infinite;
     -moz-animation: spin 2s linear infinite;
       -o-animation: spin 2s linear infinite;
          animation: spin 2s linear infinite;
  border-style: double;
  border-color: #444 transparent;
  z-index: -10;
  }

@-webkit-keyframes spin {
  100% { -webkit-transform: rotate(359deg); }
  }
@-moz-keyframes spin {
  100% { -moz-transform: rotate(359deg); }
  }
@-o-keyframes spin {
  100% { -moz-transform: rotate(359deg); }
  }
@keyframes spin {
  100% {  transform: rotate(359deg); }
  }

.buttons-area {
    margin-top: 8vh;
    margin-bottom: 8vh;
}

.join-buttons{
    height: 122px;
}


body > .container {
    margin-bottom: 60px;
}

#content{
    min-height: 100%;
}

.btn {
    margin-top: .5vh;
    margin-bottom: .5vh;
    margin-left: .5w;
    margin-right: .5vw;
}

